erDiagram
    PRESTATARIO ||--o{ PRESTAMO : "registra"
    PRESTAMO ||--|{ DETALLE_PRESTAMO : "contiene"
    EQUIPO ||--o{ DETALLE_PRESTAMO : "se presta en"
    ESTADO_PRESTAMO ||--o{ PRESTAMO : "clasifica"

    PRESTATARIO {
        int id_prestatario PK
        varchar nombre
        varchar correo UK
    }

    ESTADO_PRESTAMO {
        int id_estado PK
        varchar nombre UK
    }

    PRESTAMO {
        int id_prestamo PK
        int id_prestatario FK
        int id_estado FK
        date fecha_prestamo
        date fecha_devolucion_prevista
        date fecha_devolucion_real
    }

    EQUIPO {
        int id_equipo PK
        varchar codigo_equipo UK
        varchar nombre
        varchar categoria
    }

    DETALLE_PRESTAMO {
        int id_prestamo PK,FK
        int id_equipo PK,FK
        int cantidad
    }
